fix: update layouts and solve overflow issues
Changes made
- update main and sidebar layouts
- solve overflow issues in mobile sidebar menu
- extract repetitive codes into a reusable component
- hide unnecessary overflow

--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,9 @@
   body {
     @apply min-h-svh w-full bg-background text-foreground;
   }
+  body > #root {
+    @apply h-svh;
+  }
 }
 
 @layer utilities {
@@ -115,5 +118,9 @@
   .no-scrollbar {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
+  }
+
+  .faded-bottom {
+    @apply after:pointer-events-none after:absolute after:bottom-0 after:left-0 after:hidden after:h-32 after:w-full after:bg-[linear-gradient(180deg,_transparent_10%,_hsl(var(--background))_70%)] after:md:block;
   }
 }
